# sqlsift

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  PUBLISHING.md  README.md  dist-workspace.toml  release-please-config.json  release-plz.toml  sqlsift.toml  sqlsurge.toml
.githooks/: pre-commit
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: auto-tag.yml  code-scanning-demo.yml  publish-vscode.yml  release-please.yml  release-plz.yml  release.yml  test-npm-oidc.yml
crates/sqlsift-cli/: CHANGELOG.md  Cargo.toml
crates/sqlsift-cli/src/: args.rs  config.rs  main.rs
crates/sqlsift-cli/src/output/: mod.rs
crates/sqlsift-cli/tests/: cli_behavior.rs
crates/sqlsift-core/: CHANGELOG.md  Cargo.toml
crates/sqlsift-core/src/: lib.rs
crates/sqlsift-core/src/analyzer/: comment_directives.rs  mod.rs  resolver.rs  type_resolver.rs
crates/sqlsift-core/src/dialect/: mod.rs
crates/sqlsift-core/src/schema/: builder.rs  catalog.rs
crates/sqlsift-core/src/types/: mod.rs
crates/sqlsift-core/tests/: analyzer_tests.rs
crates/sqlsift-lsp/: CHANGELOG.md  Cargo.toml
crates/sqlsift-lsp/src/: config.rs  diagnostics.rs  main.rs  server.rs  state.rs
crates/sqlsurge-cli/: Cargo.toml
crates/sqlsurge-cli/src/: args.rs  config.rs  main.rs
crates/sqlsurge-cli/src/output/: mod.rs
crates/sqlsurge-core/: Cargo.toml
crates/sqlsurge-core/src/analyzer/: mod.rs  resolver.rs  type_resolver.rs
crates/sqlsurge-core/tests/: analyzer_tests.rs
crates/sqlsurge-lsp/: Cargo.toml
crates/sqlsurge-lsp/src/: config.rs  diagnostics.rs  main.rs  server.rs  state.rs
editors/vscode/: .vscodeignore  README.md  esbuild.mjs  language-configuration.json  package-lock.json  package.json
editors/vscode/src/: extension.ts
examples/code-scanning/: bad.sql  schema.sql
scripts/: release.sh
tests/fixtures/: schema.sql
tests/fixtures/real-world/: sakila-mysql-schema.sql  webknossos-invalid-queries.sql
