[workspace]
resolver = "2"
members = ["crates/sqlsift-core", "crates/sqlsift-cli", "crates/sqlsift-lsp"]

[workspace.package]
version = "0.1.0-alpha.8"
edition = "2021"
license = "MIT"
repository = "https://github.com/yukikotani231/sqlsift"
rust-version = "1.75"

[workspace.dependencies]
# Parser
sqlparser = { version = "0.53", features = ["visitor"] }

# CLI
clap = { version = "4.5", features = ["derive", "env"] }

# Error handling
thiserror = "2.0"
miette = { version = "7.4", features = ["fancy"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Utilities
indexmap = { version = "2.7", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
glob = "0.3"

# Async / LSP
tower-lsp = "0.20"
tokio = { version = "1", features = ["full"] }

# Internal crates
sqlsift-core = { path = "crates/sqlsift-core", version = "0.1.0-alpha.8" }

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
