[package]
name = "sqlsift-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Core library for SQL static analysis against schema definitions"
keywords = ["sql", "static-analysis", "linter", "validation", "postgresql"]
categories = ["development-tools", "database"]
readme = "../../README.md"

[dependencies]
sqlparser.workspace = true
thiserror.workspace = true
miette.workspace = true
serde.workspace = true
indexmap.workspace = true
tracing.workspace = true

[dev-dependencies]
pretty_assertions = "1.4"
