[package]
name = "sqlsurge-lsp"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "LSP server for SQL static analysis against schema definitions"
keywords = ["sql", "static-analysis", "lsp", "language-server", "postgresql"]
categories = ["development-tools", "database"]
readme = "../../README.md"

[[bin]]
name = "sqlsurge-lsp"
path = "src/main.rs"

[dependencies]
sqlsurge-core.workspace = true
tower-lsp = "0.20"
tokio = { version = "1", features = ["full"] }
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
glob.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
